--- a/spring-boot-backends-apirest/src/main/resources/application.properties
+++ b/spring-boot-backends-apirest/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.datasource.url=jdbc:mysql://localhost/db_springboot_apirest?useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234567890
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto=create-drop
+logging.level.org.hibernate.SQL=debug
 
