--- a/spring-boot-backends-apirest/src/main/resources/application.properties
+++ b/spring-boot-backends-apirest/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/db_springboot_apirest?useSSL=false
+spring.datasource.url=jdbc:mysql://localhost/db_springboot_apirest?useSSL=false&useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=1234567890
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
